Kubernetes manifests/mysql-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-cart-mysql
  namespace: shopping-cart
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: mysql
    template:
      metadata:
        labels:
          app: mysql
      spec:
        containers: 
          - name: mysql
            image: mysql:8.0
            ports:
              - containerPort: 3306
            volumeMounts:
              - name: mysql-storage
                mountPath: /var/lib/mysql

            redinessProbe:
              exec:
                command:
                  - sh
                  - -c
                  - mysqladmin ping -h 127.0.0.1 -u root -p"$MySQL_ROOT_PASSWORD"                         
              initialDelaySeconds: 30
              periodSeconds: 10
              timeoutSeconds: 5
              failureThreshold: 10

            livenessProbe:
              exec:
                command:
                  - sh
                  - -c
                  - mysqladmin ping -h 127.0.0.1 -u root -p"$MySQL_ROOT_PASSWORD"                         
              initialDelaySeconds: 30
              periodSeconds: 20
              timeoutSeconds: 5
              failureThreshold: 5

        volumes:
          - name: mysql-storage
            persistentVolumeClaim:
              claimName: mysql-pvc
