Kubernetes manifests/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: shopping-cart
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
